--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+   background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b);
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #2eafec;
+  background:#1083f6;
   color: #fff;
 }
 .back-to-top.active {
@@ -63,11 +63,19 @@ h1, h2, h3, h4, h5, h6 {
   transition: all ease-in-out 0.5s;
   z-index: 9997;
   transition: all 0.5s;
-  
+
   padding: 0 15px;
-  background: #051b37;
+   background: linear-gradient(90deg, #173e66, #010347,  #190027,#330033);
   overflow-y: auto;
 }
+/* #header:hover{background: linear-gradient(270deg,  #173e66, #010347,  #2f0247,#6b016b);
+  transition: all 0.3s ease-in-out;
+  transition: all ease-in-out 0.5s;
+  z-index: 9997;
+  transition: all 0.5s;
+} */
+
+
 #header .profile img {
   margin: 15px auto;
   display: block;
@@ -91,7 +99,7 @@ h1, h2, h3, h4, h5, h6 {
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #212431;
+  background: linear-gradient(270deg, #29629c, #2a2e99,  #2f0247,#6b016b);
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -103,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 #header .profile .social-links a:hover {
-  background: #149ddd;
+  background:#1083f6;
   color: #fff;
   text-decoration: none;
 }
@@ -136,7 +144,12 @@ h1, h2, h3, h4, h5, h6 {
 .nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
+  /* font-size: 20px; */
 }
+.nav-menu li{
+  font-size: 50px;
+}
+
 .nav-menu a, .nav-menu a:focus {
   display: flex;
   align-items: center;
@@ -169,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #149ddd;
+  background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b);
   color: #fff;
   width: 40px;
   height: 40px;
@@ -200,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero:before {
   content: "";
-  background: rgba(0, 5, 12, 0.3);
+  /* background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -215,7 +228,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
+  font-size: 70px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
@@ -278,7 +291,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+   background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b);
   bottom: 0;
   left: 0;
 }
@@ -474,12 +487,12 @@ section {
   color: #fff;
   font-size: 28px;
   text-align: center;
-  background: rgba(20, 157, 221, 0.75);
+  background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b);
   transition: 0.3s;
   width: 50%;
 }
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background: rgba(20, 157, 221, 0.95);
+  background:#1083f6;
 }
 .portfolio .portfolio-wrap .portfolio-links a + a {
   border-left: 1px solid #37b3ed;
@@ -609,12 +622,11 @@ section {
   margin-right: 10px;
 }
 .contact .info .social-links a:hover {
-  background: #149ddd;
-  color: #fff;
+  background:#1083f6;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #149ddd;
-  color: #fff;
+  background:#1083f6;
+  color: white;
 }
 .contact .php-email-form {
   width: 100%;
@@ -687,7 +699,7 @@ section {
   padding: 10px 15px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #149ddd;
+   background: linear-gradient(90deg, #173e66, #010347,  #2f0247,#6b016b);
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -766,7 +778,7 @@ section {
   bottom: 0;
   width: 300px;
   z-index: 9999;
-  background: #040b14;
+  background: linear-gradient(90deg, #173e66, #010347,  #190027,#330033);
 }
 #footer .copyright {
   text-align: center;
